fixing overflow issues

--- a/src/App.css
+++ b/src/App.css
@@ -3,8 +3,8 @@
   --main-border: #a2af9b;
   --light-accent: #acc6ee;
   --secondary: #b0db9c;
-  --selected: #BBDCE5;
-  --highlight: #FADA7A;
+  --selected: #bbdce5;
+  --highlight: #fada7a;
   --text: #333d29;
   --violation-color: #ff8785;
   --prefilled: #bccab361;
@@ -168,7 +168,6 @@ input.prefilled:focus {
 }
 
 @keyframes pulse {
-
   0%,
   100% {
     transform: scale(1);
@@ -187,7 +186,6 @@ input.prefilled:focus {
 }
 
 @keyframes shake {
-
   0%,
   100% {
     transform: translateX(0);
@@ -265,7 +263,6 @@ input.prefilled:focus {
   padding: 0;
 }
 
-
 button:hover {
   background-color: var(--highlight);
 }
@@ -275,7 +272,6 @@ button:hover {
   cursor: not-allowed;
   opacity: 0.5;
 }
-
 
 button {
   border-radius: 8px;
@@ -468,8 +464,9 @@ button {
 }
 
 @media (max-width: 480px) {
+
   h1 {
-    font-size: 30px;
+    font-size: 24px;
   }
 
   .cell-wrapper {
@@ -481,7 +478,6 @@ button {
   .cell-wrapper input {
     font-size: 4vw;
   }
-
 
   .notes-container {
     font-size: 7px;
