--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,8 @@ body {
   align-items: center;
   background-color: var(--site-bg);
   height: 100vh;
-  padding-bottom: 10rem;
+  padding: 5rem 0;
+  overflow: auto;
 }
 
 h1 {
